@@ -3,8 +3,8 @@ package com.rudderstack.kafka.connect.config;
 import org.apache.kafka.common.config.ConfigDef;
 import org.apache.kafka.common.config.ConfigException;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 class UrlValidator implements ConfigDef.Validator {
 
@@ -17,8 +17,8 @@ class UrlValidator implements ConfigDef.Validator {
             throw new ConfigException(name, value, "must be string");
         }
         try {
-            new URL((String) value);
-        } catch (final MalformedURLException e) {
+            new URI((String) value);
+        } catch (final URISyntaxException e) {
             throw new ConfigException(name, value, "malformed URL");
         }
     }
